# desafio_01_acelera

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  mkdocs.yml  pyproject.toml
docs/: index.md  outputs.md
docs/arquitetura/: estrutura.md  modulos.md
docs/guia/: execucao.md  instalacao.md
docs/regras/: bonus.md  validacao.md
src/: extract_data.py  load_data.py  transform_data.py
